@@ -188,6 +188,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Sanitizer: now handles nested <li> in <ul> or <ol>
 * (bug 5796) We require MySQL >=4.0.14
 * Add 'EmailConfirmed' hook
+* New findhooks.php script to find undocumented hooks.
 
 == Compatibility ==
 
